package.json 파일 수정 및 view, container, store directory 생성

--- a/reat_prj_05/package.json
+++ b/reat_prj_05/package.json
@@ -140,11 +140,11 @@
   },
   "babel": {
     "presets": [
-      "react-apprt"
+      "react-app"
     ],
     "plugins": [
         ["@babel/plugin-proposal-decorators", { "legacy": true}],
         ["@babel/plugin-proposal-class-properties", { "loose": true}]
     ]
-  },
+  }
 }
