--- a/reat_prj_05/package.json
+++ b/reat_prj_05/package.json
@@ -54,6 +54,7 @@
     "react-datepicker": "^3.1.3",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
+    "react-slideshow-image": "^3.0.2",
     "reactstrap": "^8.5.1",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
