--- a/reat_prj_05/package.json
+++ b/reat_prj_05/package.json
@@ -55,6 +55,7 @@
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
     "react-slideshow-image": "^3.0.2",
+    "reactjs-popup": "^1.5.0",
     "reactstrap": "^8.5.1",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
