--- a/reat_prj_05/package.json
+++ b/reat_prj_05/package.json
@@ -42,6 +42,7 @@
     "mobx": "^5.15.5",
     "mobx-react": "^6.2.5",
     "moment": "^2.27.0",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.1.0",
