--- a/reat_prj_05/package.json
+++ b/reat_prj_05/package.json
@@ -58,12 +58,14 @@
     "react-datepicker": "^3.1.3",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-slideshow-image": "^3.0.2",
     "reactjs-popup": "^1.5.0",
     "reactstrap": "^8.5.1",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
+    "router": "^1.3.5",
     "sass-loader": "8.0.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.2.0",
